@@ -65,6 +65,8 @@
 <p>While non-standard Phoronix Test Suite download caches can be specified within the <em>user-config.xml</em> file, an additional directory to look for potential Phoronix Test Suite download files can be specified by this variable.</p>
 <p><strong>GRAPH_HIGHLIGHT</strong></p>
 <p>If this variable is set with a valid test identifer from a result file whether you are using the <em>refresh-graphs</em> command or any other related to the rendering of test results on a bar graph, the specified test identifier's result will be rendered in a different color than the other test results. Multiple identifiers can be specified when delimited by a comma. Additionally, for each key it is possible to provide the actual color value, or an index in the color palette. Example: &quot;will_be_different,group1a=1,group1b=1,blue=#0000ff&quot;</p>
+<p><strong>TEST_EXEC_PREPEND</strong></p>
+<p>Set this variable to any command/environment variable that you may be passed prepended to the test execution string at runtime.</p>
 <p><strong>VIDEO_MEMORY</strong></p>
 <p>If Phodevi fails to detect the system's video memory capacity or is incorrectly detected, the video memory capacity (in MB) can be specified by this variable.</p>
 <p><strong>OVERRIDE_VIDEO_MODES</strong></p>
